--- a/AGDPMS.Web/AGDPMS.Web.csproj
+++ b/AGDPMS.Web/AGDPMS.Web.csproj
@@ -7,12 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\Inventory\ProfileList.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AGDPMS.Shared\AGDPMS.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Components\Inventory\ProfileList.razor" />
   </ItemGroup>
 
 </Project>
