--- a/AGDPMS.Web/AGDPMS.Web.csproj
+++ b/AGDPMS.Web/AGDPMS.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,20 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Components\Inventory\ProfileList.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AGDPMS.Shared\AGDPMS.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Components\Inventory\ProfileList.razor" />
   </ItemGroup>
 
 </Project>
