--- a/AGDPMS/Platforms/Android/AndroidManifest.xml
+++ b/AGDPMS/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hoamai.agdpms">
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
