move login page to shared projects

--- a/AGDPMS.Web/appsettings.json
+++ b/AGDPMS.Web/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Host=localhost;Port=5432;Database=agdpms;Username=postgres;Password=postgres"
   },
+  "Jwt": {
+    "Key": "b95549424ede709cee6ffc3b0846abec"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
