--- a/AGDPMS.Shared/AGDPMS.Shared.csproj
+++ b/AGDPMS.Shared/AGDPMS.Shared.csproj
@@ -11,8 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.10" />
+    <PackageReference Include="System.Data.Odbc" Version="9.0.10" />
   </ItemGroup>
 
 </Project>
