--- a/AGDPMS.Web/AGDPMS.Web.csproj
+++ b/AGDPMS.Web/AGDPMS.Web.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="PDFtoImage" Version="5.1.1" />
-    <PackageReference Include="System.Data.Odbc" Version="9.0.10"/>
+    <PackageReference Include="System.Data.Odbc" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
