--- a/AGDPMS.Web/AGDPMS.Web.csproj
+++ b/AGDPMS.Web/AGDPMS.Web.csproj
@@ -25,4 +25,10 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="Exports\**\*.*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
