--- a/AGDPMS.Web/AGDPMS.Web.csproj
+++ b/AGDPMS.Web/AGDPMS.Web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="PDFtoImage" Version="5.1.1" />
     <PackageReference Include="System.Data.Odbc" Version="9.0.10" />
   </ItemGroup>
