--- a/AGDPMS.Shared/AGDPMS.Shared.csproj
+++ b/AGDPMS.Shared/AGDPMS.Shared.csproj
@@ -16,9 +16,8 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.11" />
     <PackageReference Include="System.Data.Odbc" Version="9.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.10"/>
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0"/>
   </ItemGroup>
 
   <ItemGroup>
