--- a/AGDPMS/AGDPMS.csproj
+++ b/AGDPMS/AGDPMS.csproj
@@ -71,6 +71,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.120" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.10" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+    <PackageReference Include="ZXing.Net.Maui.Controls" Version="0.6.0" />
   </ItemGroup>
 
   <ItemGroup>
